overflow-x hidden to fix scrolling bar appearing on windows.

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,8 @@ body {
 
     margin: 0;
     padding: 0;
+
+    overflow-x: hidden;
 }
 
 .container {
